--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scorekeeper</title>
+    <style>
+        .winner {
+            color: green;
+        }
+
+        .loser {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Ping Pong Score Keeper</h1>
     <!-- This defines the scoreboard -->
-    <span id="p1Score">0</span>
-    <span> to </span>
-    <span id="p2Score">0</span>
-
+    <h2>
+        <span id="p1Score">0</span>
+        <span> to </span>
+        <span id="p2Score">0</span>
+    </h2>
     <!-- This defined the button section  -->
     <p>Use the buttons below to keep score</p>
     <label for="scores"><b>Playing to</b></label>
@@ -24,6 +34,7 @@
         <option value="7">7</option>
         <option value="8">8</option>
         <option value="9">9</option>
+        <option value="10">10</option>
 
     </select>
     <div></div>
